scene: Ensure there's current opengl context when DecorationItem is repainted for last time

BUG: 466186


(cherry picked from commit 2de5236e3fb4372ebafa6132eddfb16a85a331fc)