src/scene/decorationitem.cpp
@@ -207,6 +207,7 @@ void DecorationItem::handleWindowClosed(Window *original, Deleted *deleted)
     m_window = deleted;
 
     // If the decoration is about to be destroyed, render the decoration for the last time.
+    effects->makeOpenGLContextCurrent();
     preprocess();
 }
 
